Login completo, signup,logout y estilos

--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -17,6 +17,10 @@
         margin: 16px 0;
         color: #212121;
         font-size: 22px;
+        font-family: "Open Sans"
+      }
+      h3{
+        font-family: "Open Sans"
       }
 
       :root {
