--- a/src/visor-usuario/visor-usuario.html
+++ b/src/visor-usuario/visor-usuario.html
@@ -1,32 +1,75 @@
 <link rel="import" href="../../bower_components/polymer/polymer-element.html">
 <link rel="import" href="../../bower_components/iron-ajax/iron-ajax.html">
+<link rel="import" href="../../bower_components/iron-input/iron-input.html">
+<link rel="import" href="../../bower_components/paper-button/paper-button.html">
+<link rel="import" href="../../bower_components/paper-input/paper-input.html">
+<link rel="import" href="../../bower_components/brum-global-variable/brum-global-variable.html">
+<link rel="import" href="../../bower_components/iron-localstorage/iron-localstorage.html">
+<link rel="import" href="../shared-styles.html">
 
 <dom-module id="visor-usuario">
   <template>
-    <style>
+    <style include="shared-styles">
       :host {
         display: block;
+        padding: 10px;
+      }
+      .wrapper-btns {
+        margin-top: 15px;
+      }
+      paper-button.link {
+        color: #757575;
+      }
+      .alert-error {
+        background: #ffcdd2;
+        border: 1px solid #f44336;
+        border-radius: 3px;
+        color: #333;
+        font-size: 14px;
+        padding: 10px;
+        font-family: 'Open Sans'
+      }
+      input {
+        position: relative; /* to make a stacking context */
+        outline: none;
+        box-shadow: none;
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        max-width: 100%;
+        background: transparent;
+        border: none;
+        color: var(--paper-input-container-input-color, var(--primary-text-color));
+        -webkit-appearance: none;
+        text-align: inherit;
+        vertical-align: bottom;
+        /* Firefox sets a min-width on the input, which can cause layout issues */
+        min-width: 0;
+        @apply --paper-font-subhead;
+        @apply --paper-input-container-input;
       }
     </style>
-    <h3>Bienvenido [[userid]] !!</h3>
-    <input type="text" value="{{first_name::input}}"></input></br>
-    <input type="text" value="{{last_name::input}}"></input></br>
-    <input type="text" value="{{mobile_phone::input}}"></input></br>
-    <button on-click="edituserdata">Edit</button>
-    <iron-ajax
-      id="getUser"
-      url="https://localhost:8000/currobanco/v1/api/services/users/{{userid}}"
-      handle-as="json"
-      on-response="showData">
-    </iron-ajax>
-    <iron-ajax
-      id="updateUser"
-      method="PUT"
-      url="https://localhost:8000/currobanco/v1/api/services/users/{{userid}}"
-      handle-as="json"
-      on-response="editUserResponse">
-    </iron-ajax>
-
+    <div class="card">
+      <h1>Persona Area</h1>
+      <h3>Welcome [[first_name]] !!</h3>
+      <input type="text" value="{{first_name::input}}"></input></br>
+      <input type="text" value="{{last_name::input}}"></input></br>
+      <input type="text" value="{{mobile_phone::input}}"></input></br>
+      <button on-click="edituserdata">Edit</button>
+      <iron-ajax
+        id="getUser"
+        url="https://localhost:8000/currobanco/v1/api/services/users/{{userid}}"
+        handle-as="json"
+        on-response="showData">
+      </iron-ajax>
+      <iron-ajax
+        id="updateUser"
+        method="PUT"
+        url="https://localhost:8000/currobanco/v1/api/services/users/{{userid}}"
+        handle-as="json"
+        on-response="editUserResponse">
+      </iron-ajax>
+    </div>
   </template>
 
   <script>
@@ -49,7 +92,7 @@
           }, userid:{
             type: Number,
             observer: "_useridchanged"
-          }
+          },storedUser: Object
 
         };
       }
