Terminado modificacion usuarios

--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -6,7 +6,11 @@
     <style>
       .card {
         margin: 24px;
+        margin-left:10%;
+        margin-right:10%;
         padding: 16px;
+        padding-left:2%;
+        padding-right:2%;
         color: #757575;
         border-radius: 5px;
         background-color: #fff;
