--- a/src/visor-cuentas/visor-cuentas.html
+++ b/src/visor-cuentas/visor-cuentas.html
@@ -73,7 +73,7 @@
         </paper-input-container>
 
         <paper-input-container>
-          <label slot="input">Password</label>
+          <label>Password</label>
           <iron-input slot="input" bind-value="{{password}}">
             <input id="password" type="password" value="{{password}}" placeholder="Password">
           </iron-input>
