--- a/index.html
+++ b/index.html
@@ -35,8 +35,11 @@
     <link rel="import" href="/src/visor-info/visor-info.html">
     <link rel="import" href="/src/visor-infogral/visor-infogral.html">
     <link rel="import" href="/src/visor-infouser/visor-infouser.html">
+    <link rel="import" href="/src/visor-accounts/visor-accounts.html">
     <link rel="import" href="/src/login-usuario/login-usuario.html">
     <link rel="import" href="/src/user-dashboard/user-dashboard.html">
+    <link rel="import" href="/src/visor-movements/visor-movements.html">
+    <link rel="import" href="/src/make-movement/make-movement.html">
   </head>
   <body>
     <!--<login-usuario></login-usuario>-->
